@@ -98,6 +98,7 @@
     <Compile Include="Model\CompositeExpression.cs" />
     <Compile Include="Model\ConstantExpression.cs" />
     <Compile Include="Model\MessageExpression.cs" />
+    <Compile Include="Model\MethodModel.cs" />
     <Compile Include="Model\VariableExpression.cs" />
     <Compile Include="Model\IExpression.cs" />
     <Compile Include="Model\SelfExpression.cs" />
